eval_outputs/diff_and_source_code/code_change_and_test_change/third/google/27_B_Model/refined_chain-of-thought.log
=== RETURN CODE: 1 ===

=== STDOUT ===
SyntaxError: /Users/johndennehy/Documents/Coding/devops-atu-disruptive-devops-assignment/app/e2e/refined_chain-of-thought.spec.ts: Unexpected token (82:40)

  80 |   await page.getByLabel("Body").fill(bodyText)
  81 |   await page.getByLabel(/Tags/).fill("tag1")
> 82 |   await page.getByRole("button", { name:
     |                                         ^

   at refined_chain-of-thought.spec.ts:82

  80 |   await page.getByLabel("Body").fill(bodyText)
  81 |   await page.getByLabel(/Tags/).fill("tag1")
> 82 |   await page.getByRole("button", { name:
     |                                        ^

Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.

[1A[2K

=== STDERR ===

